examples/neg/issue373/wrong_type_argument_arity.effekt
interface Eff[A] {
  def op(x: A): A
}

def main() =
  try { println(eff.op[Boolean, Int]("hello")) }
  with eff: Eff[Int] { def op(x) = resume(x / 1) }